# Multi-Trade-Copier

./: .gitignore  README.md  mosquitto-native.conf
bridge/: Cargo.toml
bridge/.cargo/: config.toml
bridge/src/: lib.rs
config/: relay_config.json
deploy/launchd/: com.trs.mt4.plist  com.trs.relay.plist
deploy/scripts/: setup-launchd.sh  start-mt4.sh
deploy/vm_experts/: MasterEA.mq4  SlaveEA.mq4  SlaveEA.mq5
docker/: docker-compose.yml  mosquitto.conf
ea/master/: MasterEA.mq4
ea/slave/: SlaveEA.mq4  SlaveEA.mq5
mqtt_client_dll/: Cargo.toml
mqtt_client_dll/.cargo/: config.toml
mqtt_client_dll/src/: lib.rs
relay/: go.mod  go.sum  main.go
relay/adapters/: adapter.go  matchtrade.go  tradelocker.go  tradovate.go  vm_slave.go
relay/config/: symbols.json
relay/engine/: payload.go  risk.go
