[package]
name = "mt4_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "mt4_bridge"
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
