cargo-features = ["panic-immediate-abort"]

[package]
name = "mqtt_client_dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "MQTTClient"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
panic = "immediate-abort"
strip = true

[dependencies]
lazy_static = "1.4"
rumqttc = "0.24"
